--- a/revisar.html
+++ b/revisar.html
@@ -4,10 +4,13 @@
 	<meta charset="UTF-8">
 	<title>tareas</title>
 	<script type="text/javascript">
-		
-		alert('¡Hola mundo!');
+
+		alert('¡Hola Amigos!');
+
 	</script>
 </head>
 <body>
+
+	<h1 align="center">Un gusto saludarlos</h1>
 </body>
 </html>
