--- a/tareas.html
+++ b/tareas.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Introduccion a JavaScript</title>
+	<title>tareas</title>
 	<script type="text/javascript">
-		
-		alert('¡Hola mundo!');
+
+		alert('¡Hola!');
+
 	</script>
 </head>
 <body>
-	Contenido de la web
+
+	<h1 align="center">Te estamos hackeando</h1>
 </body>
 </html>
