--- a/revisar.html
+++ b/revisar.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
-	<h1 align="center">Un gusto saludarlos</h1>
+	<h3>Alexis Ramirez Varillas</h3>
+	<h3>Matricula: 3521110370</h3>
 </body>
 </html>
